处理粉丝昵称搜索

--- a/weapp/weixin2/templates/weixin/advance_manage/channel_qrcodes.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/channel_qrcodes.html
@@ -67,7 +67,7 @@
             <span>粉丝昵称：</span>
             <input class="xui-searchInput  w250 xa-search-title h30" type="text"><a class="xui-searchBtn btn btn-default xa-searchBtn xa-search h30 ml0 mr5" style="min-width:50px!important;background: #f2f2f2;border-left-width: 0px; border-radius:0px;">搜索</a>
         </div>
-        <a class="btn btn-default lh20 xui-i-btnWidth xa-exportQrcode fr" href="javascript:void(0);" style="width:100px!important;">导出</a>
+        <!-- <a class="btn btn-default lh20 xui-i-btnWidth xa-exportQrcode fr" href="javascript:void(0);" style="width:100px!important;">导出</a> -->
     </span>
     </div>
 </div>
