--- a/weapp/mall/templates/mall/editor/promotion/select_coupon_rule.html
+++ b/weapp/mall/templates/mall/editor/promotion/select_coupon_rule.html
@@ -9,7 +9,7 @@
 <div class="xui-couponRulesPage xui-commonPromotionStyle">
 <ul class="breadcrumb">
     <li>您当前所在位置</li>
-    <li><a href="/mall2/promotion_list/">促销管理</a></li>
+    <li><a href="/mall2/flash_sale_list/">促销管理</a></li>
     <li><a href="/mall2/coupon_rule_list/">优惠券</a></li>
     <li class="active">优惠码信息</li>
 </ul>
