--- a/weapp/mall/templates/mall/editor/promotion/coupons.html
+++ b/weapp/mall/templates/mall/editor/promotion/coupons.html
@@ -14,7 +14,7 @@
 <div class="relative">
 	<ul class="breadcrumb">
 		<li>您当前所在位置</li>
-		<li><a href="/mall2/promotion_list/">促销管理</a></li>
+		<li><a href="/mall2/flash_sale_list/">促销管理</a></li>
 		<li class="active">优惠券</li>
 	</ul>
 </div>
