--- a/weapp/mall/templates/mall/editor/promotion/create_coupon.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_coupon.html
@@ -9,7 +9,7 @@
 <div class="xui-editProductPage xui-mall-addProductForm">
 <ul class="breadcrumb">
     <li>您当前所在位置</li>
-    <li><a href="/mall2/promotion_list/">促销管理</a></li>
+    <li><a href="/mall2/flash_sale_list/">促销管理</a></li>
     <li><a href="/mall2/coupon_rule_list/">优惠券</a></li>
     <li class="active">码库</li>
 </ul>
