--- a/weapp/mall/templates/mall/editor/promotion/create_price_cut.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_price_cut.html
@@ -6,7 +6,7 @@
 <div class="relative">
     <ul class="breadcrumb">
         <li>您当前所在位置</li>
-        <li><a href="/mall2/promotion_list/">促销管理</a></li>
+        <li><a href="/mall2/flash_sale_list/">促销管理</a></li>
         <li><a href="/mall2/price_cut_list/">满减</a></li>
         <li class="active">新建满减活动</li>
     </ul>
