--- a/weapp/mall/templates/mall/editor/promotion/issuing_coupons_detail.html
+++ b/weapp/mall/templates/mall/editor/promotion/issuing_coupons_detail.html
@@ -17,7 +17,7 @@
     <div class="relative">
         <ul class="breadcrumb">
             <li>您当前所在位置</li>
-            <li><a href="/mall2/promotion_list/">促销管理</a></li>
+            <li><a href="/mall2/flash_sale_list/">促销管理</a></li>
             <li class="active"><a href="/mall2/issuing_coupons_record_list/">发优惠券</a></li>
             <li class="active">发优惠券详情</li>
         </ul>
