--- a/weapp/mall/templates/mall/editor/red_envelope_rules.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_rules.html
@@ -11,7 +11,7 @@
 <div class="relative">
     <ul class="breadcrumb">
         <li>您当前所在位置</li>
-        <li><a href="/mall2/promotion_list/">促销管理</a></li>
+        <li><a href="/mall2/flash_sale_list/">促销管理</a></li>
         <li class="active">分享红包</li>
     </ul>
 </div>
