--- a/weapp/mall/templates/mall/editor/onshelf_products.html
+++ b/weapp/mall/templates/mall/editor/onshelf_products.html
@@ -20,7 +20,7 @@
 				<input type="checkbox" id="topSelectAll" class="xa-selectAll">全选
 			</label>
 			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchOffshelf">批量下架</a>
-			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchRecycle">批量到回收站</a>
+			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchDelete">彻底删除</a>
 			<a href="/mall2/product/" class="btn btn-success xui-addProductBtn ml10 xa-addProduct fr">
 				<span style="padding-right:5px;"><img src="/static_v2/img/editor/plusOpcity.png"></span>
 				添加新商品
@@ -46,7 +46,7 @@
 				<input type="checkbox" id="bottomSelectAll" class="xa-selectAll">全选
 			</label>
 			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchOffshelf">批量下架</a>
-			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchRecycle">批量到回收站</a>
+			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchDelete">彻底删除</a>
 		</div>
 
 	</div>
@@ -165,7 +165,7 @@
 						<a href="javascript:void(0);" class="xa-offshelf fl" style="width: 30px;">下架</a>
 					</div>
 						</br>
-						<a href="javascript:void(0);" class="xa-recycle">移至回收站</a>
+						<a href="javascript:void(0);" class="xa-delete">彻底删除</a>
 					</td>
 				</tr>
 				{{/each}}
