--- a/weapp/member/templates/member/editor/member_grades.html
+++ b/weapp/member/templates/member/editor/member_grades.html
@@ -350,7 +350,10 @@
                     args: {'grades': JSON.stringify(grades),'is_all_conditions':is_all_conditions},
                     success: function(data) {
                         W.showHint('success', '保存成功');
-                        window.location.reload();
+                        setTimeout(function(){
+                            window.location.reload();//2秒后执行
+                        },2000);
+
 
                     },
                     error: function() {
