商品启用会员折扣

--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -103,6 +103,7 @@
 				</div>
 			</div>
 			{%endif%}
+      <label>会员折扣: <input name="is_member_product" type="checkbox" >{{product.is_member_product}}</label>
 		</fieldset>
 
 		<fieldset>
