去掉多余的单引号

--- a/weapp/stats/templates/sales/order_summary.html
+++ b/weapp/stats/templates/sales/order_summary.html
@@ -215,7 +215,7 @@
 		}
 
 		var formatter_func = function(params, ticket, callback) {
-			var res = "<b>" + params.name + "</b><br/>订单量：" + params.value + "<br/>订单量占比：" + params.percent + "%'";
+			var res = "<b>" + params.name + "</b><br/>订单量：" + params.value + "<br/>订单量占比：" + params.percent + "%";
 			return res;
 		}
 		option = {
@@ -285,7 +285,7 @@
 		}
 		
 		var formatter_func = function(params, ticket, callback) {
-			var res = "<b>" + params.name + "</b><br/>订单量：" + params.value + "<br/>订单量占比：" + params.percent + "%'";
+			var res = "<b>" + params.name + "</b><br/>订单量：" + params.value + "<br/>订单量占比：" + params.percent + "%";
 			return res;
 		}
 		option = {
