--- a/weapp/member/templates/member/editor/member_grades.html
+++ b/weapp/member/templates/member/editor/member_grades.html
@@ -44,7 +44,7 @@
                 <li><span>2.</span> 自动升级：创建完成后，会员满足升级条件时，自动变为该等级会员，无需手动调整；</li>
                 <li><span>3.</span>满足一个条件：会员满足升级条件中的任意一个，即可升级为该等级会员；</li>
                 <li><span>4.</span> 满足所有条件：会员必须满足所有升级条件，才可升级为该等级会员；</li>
-                <li><span>5.</span> 交易金额：已完成的订单的师傅金额（包括微众卡支付的金额）；</li>
+                <li><span>5.</span> 交易金额：已完成的订单的实付金额（包括微众卡支付的金额）；</li>
                 <li><span>6.</span> 购买次数：已完成的订单数；</li>
                 <li><span>7.</span> 经验值：累计获得积分总数，积分消费后经验值不减少。</li>
             </ul>
