--- a/weapp/weixin2/templates/weixin/advance_manage/channel_qrcodes.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/channel_qrcodes.html
@@ -44,7 +44,7 @@
     <div class="relative">
         <ul class="breadcrumb">
             <li>您当前所在位置</li>
-            <li><a href="/new_weixin/materials/">高级管理</a></li>
+            <li><a href="/new_weixin/channel_qrcode/">高级管理</a></li>
             <li class="active">渠道扫码</li>
         </ul>
     </div>
