去掉多余的显示

--- a/weapp/weixin2/templates/weixin/advance_manage/channel_qrcode_order.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/channel_qrcode_order.html
@@ -49,7 +49,7 @@
 <div class="panel panel-default mt20 xui-bigBoxbg">
     <div class="panel panel-default ml10 mr10 mb50" style="border:none;">
         <div class="panel-heading xui-qrcode-order-head">
-            <input type="checkbox" class="is_show vs" checked value="0">&nbsp;&nbsp;仅显示扫码后成交订单
+            <!-- <input type="checkbox" class="is_show vs" checked value="0">&nbsp;&nbsp;仅显示扫码后成交订单 -->
             <div class="xui-i-money">现金支付：<span class="xa-getFinalPrice">0.00</span>&nbsp;&nbsp;微众卡支付：<span class="xa-getWeizoomCardMoney">0.00</span></span></div>
         </div>
         <div
