完善数据库设计 修复页面样式 隐藏带参数二维码 添加测试id

--- a/weapp/weixin2/templates/weixin/advance_manage/edit_member_channel_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_member_channel_qrcode.html
@@ -46,7 +46,7 @@
                     </select>
                     <span name="prize_source|0" class="xua-remainedCount"></span>
                     <input type="text" class="" name="prize_source|0" for_type="3"
-                    {% if award_content.award_type == 3 %}
+                    {% if award_content.scanner_award_type == 3 %}
                         value='{{ award_content.scanner_award_content }}'
                         data-validate="require-int"
                     {% else %}
