--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/new_channel_qrcode_img.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/new_channel_qrcode_img.html
@@ -15,6 +15,9 @@
         border-radius:4px;
         border:1px solid #dfdfdf;
     }
+    .xui-myRecPage .xui-header{
+        padding-bottom: 56px;
+    }
 </style>
 {% endblock %}
 {% block content-panel %}
