--- a/weapp/apps/customerized_apps/shengjing/templates/webapp/study_plan.html
+++ b/weapp/apps/customerized_apps/shengjing/templates/webapp/study_plan.html
@@ -202,7 +202,7 @@
 	<div class="wui-swiper-container"> 
 		<div class="xui-topNav">
 			<div class="xui-userCenter-header">
-				<div class="xui-pageTitle ml20">学习计划</div>
+				<div class="xui-pageTitle ml20">学习计划11</div>
 				<select class="ua-company ml20" name="companys" id="companySelect">
 					{% for company in companys %}
 						<option value="{{company.name}}">{{company.name}}</option>
