样式和验证问题

--- a/weapp/weixin2/templates/weixin/advance_manage/channel_qrcode_member.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/channel_qrcode_member.html
@@ -27,7 +27,7 @@
         <ul class="breadcrumb">
             <li>您当前所在位置</li>
             <li><a href="/new_weixin/materials/">高级管理</a></li>
-            <li><a href="/new_weixin/channel_qrcodes/">渠道扫码</a></li>
+            <li><a href="/new_weixin/channel_qrcodes/">首草渠道扫码</a></li>
             <li class="active">关注粉丝</li>
         </ul>
     </div>
@@ -73,7 +73,7 @@
         <div class="panel-heading">
             <!-- <a class="xui-tipBox fr">
             如何对数据排序<b class="xui-tip">?</b></a> -->
-            <input type="checkbox" class="is_show vs" checked value="0">&nbsp;&nbsp;仅显示通过二维码新关注会员
+            <!-- <input type="checkbox" class="is_show vs" checked value="0">&nbsp;&nbsp;仅显示通过二维码新关注会员 -->
         </div>
 
         <div
