--- a/weapp/weixin2/templates/weixin/advance_manage/channel_qrcode_order.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/channel_qrcode_order.html
@@ -5,7 +5,7 @@
     <ul class="breadcrumb">
         <li>您当前所在位置</li>
         <li><a href="/new_weixin/materials/">高级管理</a></li>
-        <li><a href="/new_weixin/channel_qrcodes/">渠道扫码</a></li>
+        <li><a href="/new_weixin/channel_qrcodes/">首草渠道扫码</a></li>
         <li class="active">交易订单</li>
     </ul>
 </div>
@@ -48,7 +48,7 @@
 </div>
 <div class="panel panel-default mt20 xui-bigBoxbg">
     <div class="panel panel-default ml10 mr10 mb50" style="border:none;">
-        <div class="panel-heading xui-qrcode-order-head">
+        <div class="panel-heading xui-qrcode-order-head" style="height:18px;">
             <!-- <input type="checkbox" class="is_show vs" checked value="0">&nbsp;&nbsp;仅显示扫码后成交订单 -->
             <div class="xui-i-money">现金支付：<span class="xa-getFinalPrice">0.00</span>&nbsp;&nbsp;微众卡支付：<span class="xa-getWeizoomCardMoney">0.00</span></span></div>
         </div>
