--- a/weapp/weixin2/templates/weixin/advance_manage/channel_qrcodes.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/channel_qrcodes.html
@@ -45,7 +45,7 @@
         <ul class="breadcrumb">
             <li>您当前所在位置</li>
             <li><a href="/new_weixin/channel_qrcode/">高级管理</a></li>
-            <li class="active">渠道扫码</li>
+            <li class="active">首草渠道扫码</li>
         </ul>
     </div>
     <div class="xui-rightPanel pr">
