--- a/weapp/weixin2/templates/weixin/advance_manage/edit_member_channel_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_member_channel_qrcode.html
@@ -12,11 +12,11 @@
         <li>
             <a href="/member/members/get/">高级管理</a>
         </li>
-        <li class="active">渠道扫码</li>
+        <li class="active">首草渠道扫码</li>
     </ul>
     <div class="xui-rightPanelBg">
         <p class="xui-rightPanelTitle">
-            渠道扫码
+            首草渠道扫码
         </p>
         <div class="xui-i-content mt20">
             <form action="post">
@@ -32,10 +32,11 @@
                         <option value="3">积分</option>
 
                     </select>
+
                     <select class="" name="prize_source|0" for_type="1"
                     {% if award_content.scanner_award_type == 1 %}
                         value='{{ award_content.scanner_award_content }}'
-                        data-validate="require-select"
+                        data-validate="Weapp"
                     {% else %}
                         style="display:none;"
                     {% endif %} >
@@ -52,7 +53,7 @@
                     {% else %}
                         style="display:none;"
                     {% endif %} placeholder="请输入积分数值">
-                    <div class="errorHint"></div>
+                    <div class="errorHint" style="margin-left: 60px;"></div>
                 </fieldset>
                 <!--######-->
                 <fieldset class="xui-prize">
@@ -69,7 +70,7 @@
                     <select class="" name="prize_source|1" for_type="1"
                     {% if award_content.share_award_type == 1 %}
                         value='{{ award_content.share_award_content }}'
-                        data-validate="require-select"
+                        data-validate="require-select-valid-option"
                     {% else %}
                         style="display:none;"
                     {% endif %} >
@@ -86,7 +87,7 @@
                     {% else %}
                         style="display:none;"
                     {% endif %} placeholder="请输入积分数值">
-                    <div class="errorHint"></div>
+                    <div class="errorHint" style="margin-left: 60px;"></div>
                 </fieldset>
                 <fieldset class="xui-info">
                     <label for="" class="star_show">页面描述：</label>
@@ -122,6 +123,8 @@ $(document).ready(function() {
         var count = $(':selected', this).data('count');
         if(count || count == 0){
             $(this).next('.xua-remainedCount').html('当前库存:'+count).show().append($('<a/>').attr('href','/mall2/coupon/?rule_id='+$(this).val()).html('增加库存'));
+        }else{
+            $(this).next('.xua-remainedCount').html("");
         }
     });
 
@@ -129,6 +132,8 @@ $(document).ready(function() {
         var count = $(':selected', this).data('count');
         if(count || count == 0){
             $(this).next('.xua-remainedCount').html('当前库存:'+count).show().append($('<a/>').attr('href','/mall2/coupon/?rule_id='+$(this).val()).html('增加库存'));
+        }else{
+            $(this).next('.xua-remainedCount').html("");
         }
     });
 
@@ -145,7 +150,7 @@ $(document).ready(function() {
 
         switch(type) {
         case '1':
-            $coupon_id.attr('data-validate', 'require-select');
+            $coupon_id.attr('data-validate', 'require-select-valid-option');
             break;
         case '3':
             $integral.attr('data-validate', 'require-int');
@@ -174,6 +179,9 @@ $(document).ready(function() {
     });
 
     $('form').submit(function(){
+        if (!W.validate()) {
+            return false;
+        }
         var args = $('form').serializeObject();
         args.id = parseInt({{member_qrcode_settings.id}}) || 0;
         if (args['prize_type|0'] == 1){
